Renamed MainActivity to Homepage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <!-- end money tracking  -->
 
     <!-- flashcard -->
-
+    <string name="f_btn_add_categroy">Add Category</string>
 
     <!-- end flashcard -->
 </resources>
