Aroosha donations string values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,11 @@
 
 
 <!-- to-do list -->
-
+    <string name="t_appbar"></string>
+    <string name="t_todo_bttn">Todo</string>
+    <string name="t_done_bttn">Done</string>
+    <string name="t_tasks_heading">Tasks</string>
+    <string name="add_new_task_bttn">Add new Task</string>
 
 <!-- end to do list -->
 
