--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,48 +1,7 @@
 <resources>
-<!-- homepage -->
+    <!-- homepage and common part -->
     <string name="app_name">GoalsOnTrack</string>
-<!-- end of homepage -->
 
 
-<!-- to-do list -->
-
-
-<!-- end to do list -->
-
-<!-- reminders -->
-
-
-<!-- end reminders -->
-
-<!-- money tracking -->
-
-<!-- end money tracking  -->
-
-<!-- flashcard -->
-
-    <!---->
-    <string name="f_home_text">Create your first Category</string>
-    <string name="f_all_category">All Category</string>
-    <string name="f_add_button">Add</string>
-    <string name="f_add_card_button">ADD CARD</string>
-    <string name="f_practice_button">PRACTICE</string>
-    <string name="f_back_button">Back</string>
-    <string name="f_display_all_list">ALL</string>
-    <string name="f_display_reviewed_list">REVIEWED</string>
-    <string name="f_display_not_reviewed_list">NOT REVIEWED</string>
-    <string name="f_enter_word">Enter Word</string>
-    <string name="f_enter_sentences">Sentences</string>
-    <string name="f_enter_definitions">Enter Definitions for the word</string>
-    <string name="f_add_more_button">ADD MORE</string>
-    <string name="f_show_answer">SHOW ANSWER</string>
-    <string name="f_not_sure_button">NOT SURE</string>
-    <string name="f_easy_button">EASY</string>
-    <string name="f_good_button">GOOD</string>
-    <string name="f_hard_button">HARD</string>
-    <string name="f_edit_word_button">EDIT</string>
-    <string name="f_confirm_edit_word_button">CONFIRM EDIT</string>
-
-
-<!-- end flashcard -->
 </resources>
 
